# SRM-Fetcher-DPS

./: README.md  bot.py  keep_alive.py  main.py  pyproject.toml  removedCode.txt  requirments.txt  test.py  users.json
dependencies/Tesseract-OCR/: cntraining.1.html  combine_lang_model.1.html  combine_tessdata.1.html  dawg2wordlist.1.html  lstmeval.1.html  lstmtraining.1.html  merge_unicharsets.1.html  mftraining.1.html  set_unicharset_properties.1.html  shapeclustering.1.html  tesseract.1.html  text2image.1.html  unicharambigs.5.html  unicharset.5.html  unicharset_extractor.1.html  wordlist2dawg.1.html
dependencies/Tesseract-OCR/doc/: AUTHORS  README.md
dependencies/Tesseract-OCR/tessdata/configs/: box.train  box.train.stderr  lstm.train
dependencies/Tesseract-OCR/tessdata/tessconfigs/: msdemo  segdemo
