[tool.poetry]
name = "srmfetcherbot"
version = "0.1.0"
description = ""
authors = ["Atendimento205 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyocr = "^0.8"
discord = "^1.0.1"
pytesseract = "^0.3.7"
selenium = "^3.141.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
